# Contexitiy

./: .gitignore  Marco.json  package-lock.json  package.json  schema.json  turbo.json  update-workspace-report-prompt.md  workspace-report.md
.github/: ci.yml
.turbo/daemon/: eb35c476bbd14786-turbo.log.2025-02-03
apps/graph-backend-python/: .env  package.json  pyproject.toml
apps/graph-frontend-react/: package-lock.json  package.json  vite.config.js
apps/graph-frontend-react/src/: App.jsx
apps/graph-frontend-react/src/Components/: GraphEditor.js  Layout.js
apps/graph-frontend-react/src/components/: GraphEditor.jsx  SideNav.jsx
apps/graph-frontend-react/src/components/templates/: AddNode.jsx  AdjustEdge.jsx  ModifyNode.jsx  index.ts
apps/graph-frontend-react/src/components/templates/Backup/: CreateNode.js  EditEdge.js  EditNode.js  EditPetEdges.js  EditRegisteredPet.js  PetNodeCreation.js
docker/: DatabaseTroubleShooting.md  docker-compose.yml
docker/Dockerfiles/: graph-backend.dockerfile  graph-frontend.dockerfile
scripts/: backup.sh
