[tool.poetry]
name = "graph-backend"
version = "0.1.0"
description = "Python service for Graph DB Neo4j + Vector DB Weaviate"
authors = ["You <The Ignorant Bastard>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
neo4j = "^5.6.0"
weaviate-client = "^3.16.0"
pydantic = "^1.10.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"


[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.core.masonry.api"
